k8s/zenml-toolkit/deploy-ofs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zenml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zenml-toolkit-deployment
  namespace: zenml
  labels:
    app: zenml-toolkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zenml-toolkit
  template:
    metadata:
      labels:
        app: zenml-toolkit
    spec:
      containers:
      - name: zenml-toolkit
        image: harbor-ofs.kyligence.com/zenml-toolkit/zenml-toolkit:0.1.1
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "200Mi"
            cpu: "200m"
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: zenml-toolkit-storage
          mountPath: /opt/Kyligence-ZenML-Toolkit/tmp
      volumes:
      - name: zenml-toolkit-storage
        persistentVolumeClaim:
          claimName: zenml-toolkit-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: zenml-toolkit-svc
  namespace: zenml
spec:
  selector:
    app: zenml-toolkit
  type: ClusterIP
  ports:
  - name: zenml-toolkit-svc
    protocol: TCP
    port: 80
    targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zenml-toolkit-ingress
  namespace: zenml
spec:
  rules:
  - host: zenml-toolkit.dev.kyligence.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zenml-toolkit-svc
            port:
              number: 80
